<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Registro"
    >

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:orientation="vertical"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:textSize="25dp"
            android:text="@string/CrearContactoTxt"/>

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            app:lottie_imageAssetsFolder="assets"
            app:lottie_fileName="animacionsobre.json"
            app:lottie_loop="true"
            app:lottie_autoPlay="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/nombreEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/NombreEt"
                android:drawableStart="@drawable/vector_person"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotoregular"
                android:inputType="textEmailAddress"
                android:padding="20dp"
                />
            <!--
                hace que la primera palabra tiene que ser en mayuscula y la que viene despues tambien
            android:inputType="textPersonName|textCapWords"
                -->

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/correoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/CorreoEt"
                android:drawableStart="@drawable/vector_correo"
                android:drawablePadding="10dp"
                android:fontFamily="@font/robotoregular"
                android:padding="20dp"
                />


        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
         >

            <EditText
                android:id="@+id/telefonoEt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/TelefonoEt"
                android:drawableStart="@drawable/vector_telefono"
                android:drawablePadding="10dp"
                android:inputType="phone"
                android:fontFamily="@font/robotoregular"
                android:padding="20dp"
                />

        </com.google.android.material.textfield.TextInputLayout>


        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="170dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal"
            >

            <androidx.cardview.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|end"
                android:layout_marginEnd="5dp"
                android:layout_marginBottom="8dp"
                android:layout_weight="1"
                app:cardCornerRadius="50dp"
                app:cardElevation="10dp">

                <com.google.android.material.floatingactionbutton.FloatingActionButton
                    android:id="@+id/floatingHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:backgroundTint="#03A9F4"
                    android:clickable="true"
                    app:srcCompat="@drawable/vector_menu" />
            </androidx.cardview.widget.CardView>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <Button
            android:id="@+id/guardarRegistoEt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/GuardarContactoEt"
            android:textSize="20dp"
            android:fontFamily="@font/robotoregular"
            android:layout_marginTop="15dp"
            />



    </androidx.appcompat.widget.LinearLayoutCompat>
</LinearLayout>